grammar.js
    source_file: $ => seq(
      optional($.shebang),
      repeat($._statement),
    ),

    _statement: $ => choice(
      $.expression_statement,
      $._declaration_statement,
    ),

    empty_statement: _ => ';',

    expression_statement: $ => choice(
      seq($._expression, ';'),
      prec(1, $._expression_ending_with_block),
    ),

    attribute_item: $ => seq(
      '#',
      '[',
      $.attribute,
      ']',
    ),

    attribute: $ => seq(
      $._path,
      optional(choice(
        seq('=', field('value', $._expression)),
        field('arguments', alias($.delim_token_tree, $.token_tree)),
      )),
    ),

    function_item: $ => seq(
      repeat($.attribute_item),
      optional($.visibility_modifier),
      optional($.function_modifiers),
      'fn',
      field('name', choice($.identifier, $.metavariable)),
      field('type_parameters', optional($.type_parameters)),
      field('parameters', $.parameters),
      optional(seq('->', field('return_type', choice($.named_return_type, $._type)))),
      // Tactus spec clauses and where clause can appear in any order
      repeat(choice(
        $.requires_clause,
        $.ensures_clause,
        $.recommends_clause,
        $.decreases_clause,
        $.where_clause,
      )),
      // Body is either a Rust block (exec/spec fns) or a tactic block (proof fns)
      field('body', choice($.block, $.tactic_block)),
    ),

    function_modifiers: $ => repeat1(choice(
      'async',
      'default',
      'const',
      'unsafe',
      $.extern_modifier,
      // Tactus function mode keywords
      'spec',
      'proof',
      'exec',
      // Tactus spec visibility modifiers
      'open',
      'closed',
      // Tactus broadcast modifiers
      'broadcast',
      'axiom',
    )),

    parameters: $ => seq(
      '(',
      sepBy(',', seq(
        optional($.attribute_item),
        choice(
          $.parameter,
          $.self_parameter,
          $.variadic_parameter,
          '_',
          $._type,
        ))),
      optional(','),
      ')',
    ),

    parameter: $ => seq(
      // Tactus: ghost/tracked qualifier on parameters
      optional(choice('ghost', 'tracked')),
      optional($.mutable_specifier),
      field('pattern', choice(
        $._pattern,
        $.self,
      )),
      ':',
      field('type', $._type),
    ),

    requires_clause: $ => seq(
      'requires',
      sepBy1(',', $._expression),
      optional(','),
    ),

    ensures_clause: $ => seq(
      'ensures',
      sepBy1(',', $._expression),
      optional(','),
    ),

    _type: $ => choice(
      $.abstract_type,
      $.reference_type,
      $.metavariable,
      $.pointer_type,
      $.generic_type,
      $.scoped_type_identifier,
      $.tuple_type,
      $.unit_type,
      $.array_type,
      $.function_type,
      $._type_identifier,
      $.macro_invocation,
      $.never_type,
      $.dynamic_type,
      $.bounded_type,
      $.removed_trait_bound,
      alias(choice(...primitiveTypes), $.primitive_type),
    ),

    _expression_except_range: $ => choice(
      $.unary_expression,
      $.reference_expression,
      $.try_expression,
      $.binary_expression,
      $.assignment_expression,
      $.compound_assignment_expr,
      $.type_cast_expression,
      $.call_expression,
      $.return_expression,
      $.yield_expression,
      $._literal,
      prec.left($.identifier),
      alias(choice(...primitiveTypes), $.identifier),
      prec.left($._reserved_identifier),
      $.self,
      $.scoped_identifier,
      $.generic_function,
      $.await_expression,
      $.field_expression,
      $.array_expression,
      $.tuple_expression,
      prec(1, $.macro_invocation),
      $.unit_expression,
      $.break_expression,
      $.continue_expression,
      $.index_expression,
      $.metavariable,
      $.closure_expression,
      $.parenthesized_expression,
      $.struct_expression,
      $._expression_ending_with_block,
      // Tactus expressions
      $.assert_expression,
      $.assume_expression,
      $.forall_expression,
      $.exists_expression,
      $.choose_expression,
    ),

    _expression: $ => choice(
      $._expression_except_range,
      $.range_expression,
    ),

    _expression_ending_with_block: $ => choice(
      $.unsafe_block,
      $.async_block,
      $.gen_block,
      $.try_block,
      $.block,
      $.if_expression,
      $.match_expression,
      $.while_expression,
      $.loop_expression,
      $.for_expression,
      $.const_block,
      // Tactus
      $.proof_block,
      $.tactic_block,
      alias($._assert_by_expression, $.assert_expression),
    ),

    // Tactus: tactus! { ... } blocks parse their body as structured declarations
    macro_invocation: $ => seq(
      field('macro', choice(
        $.scoped_identifier,
        $.identifier,
        $._reserved_identifier,
      )),
      '!',
      choice(
        // Brace body: parse as statements so tree-sitter sees items inside
        // verus! { proof fn ... by { } } etc.
        seq('{', repeat($._statement), optional($._expression), '}'),
        // Paren/bracket body: opaque token tree
        alias($._paren_bracket_token_tree, $.token_tree),
      ),
    ),

    _paren_bracket_token_tree: $ => choice(
      seq('(', repeat($._delim_tokens), ')'),
      seq('[', repeat($._delim_tokens), ']'),
    ),

    scoped_identifier: $ => seq(
      field('path', optional(choice(
        $._path,
        $.bracketed_type,
        alias($.generic_type_with_turbofish, $.generic_type),
      ))),
      '::',
      field('name', choice($.identifier, $.super)),
    ),

    binary_expression: $ => {
      const leftAssocTable = [
        [PREC.and, '&&'],
        [PREC.or, '||'],
        [PREC.bitand, '&'],
        [PREC.bitor, '|'],
        [PREC.bitxor, '^'],
        [PREC.comparative, choice('==', '!=', '<', '<=', '>', '>=', '===', '!==')],
        [PREC.shift, choice('<<', '>>')],
        [PREC.additive, choice('+', '-')],
        [PREC.multiplicative, choice('*', '/', '%')],
      ];

      // @ts-ignore
      return choice(
        ...leftAssocTable.map(([precedence, operator]) => prec.left(precedence, seq(
          field('left', $._expression),
          // @ts-ignore
          field('operator', operator),
          field('right', $._expression),
        ))),
        // Tactus: right-associative implication operators
        prec.right(PREC.implies, seq(
          field('left', $._expression),
          field('operator', choice('==>', 'implies')),
          field('right', $._expression),
        )),
      );
    },

    call_expression: $ => prec(PREC.call, seq(
      field('function', $._expression_except_range),
      field('arguments', $.arguments),
    )),

    arguments: $ => seq(
      '(',
      sepBy(',', seq(repeat($.attribute_item), $._expression)),
      optional(','),
      ')',
    ),

    parenthesized_expression: $ => seq(
      '(',
      repeat($.attribute_item),
      $._expression,
      ')',
    ),

    closure_parameters: $ => seq(
      '|',
      sepBy(',', choice(
        $._pattern,
        $.parameter,
      )),
      '|',
    ),

    proof_block: $ => seq(
      'proof',
      $._tactic_brace_body,
    ),

    block: $ => seq(
      optional(seq($.label, ':')),
      '{',
      repeat($._statement),
      optional($._expression),
      '}',
    ),

    // Section - Tactus tactic blocks (Lean-style proof language)
    //
    // Tactic blocks reuse the existing Rust `block` rule internally to avoid
    // creating new expression-parsing conflicts. Tactic-specific keywords
    // (simp, ring, etc.) are parsed as identifiers/expressions within the block.
    // The `tactic_block` node type tags the block as containing tactics rather
    // than executable Rust code, which the compiler backend uses to route to
    // Lean instead of rustc.
    //
    // The tactic-specific node types (tactic_simp, tactic_ring, etc.) are added
    // as expression variants so they get proper highlighting and structure
    // within tactic blocks.

    // by { ... } — tactic proof block
    // Uses _tactic_brace_body: content is Lean syntax, not Rust.
    // // comments are handled by the line_comment extra (which consumes to EOL).
    // Users must not use // (Lean integer division) in tactic blocks;
    // use Nat.div or Int.div instead.
    tactic_block: $ => seq(
      'by',
      $._tactic_brace_body,
    ),

    // Tactic brace body: { ... } where content is Lean, not Rust.
    // Handles Lean-specific syntax: -- line comments, /- -/ block comments,
    // "..." strings, Unicode (⟨⟩·∀∃), and nested { } braces.
    // // is still consumed as a line_comment extra — this is intentional.
    _tactic_brace_body: $ => seq(
      '{',
      repeat($._tactic_item),
      '}',
    ),

    forall_expression: $ => prec(PREC.closure, seq(
      'forall',
      field('parameters', $.closure_parameters),
      field('body', $._verus_condition),
    )),

    // exists|params| body
    _verus_condition: $ => choice(
      $._expression,
      $.attributed_expression,
    ),

    assert_expression: $ => prec(2, seq(
      'assert',
      choice(
        seq(
          '(',
          field('condition', $._expression),
          ')',
        ),
        seq(
          'forall',
          field('parameters', $.closure_parameters),
          field('condition', $._verus_condition),
        ),
      ),
    )),

    // assert(cond) by { tactic_proof }
    // assert forall|params| [hyp implies] cond by { tactic_proof }
    // Block-ending variants (no ; needed in expression_statement)
    attributed_expression: $ => prec(2, seq(
      repeat1($.attribute_item),
      field('expression', $._expression),
    )),

    // assume(cond) — kept for backwards compat, but prefer sorry in tactic blocks
    _pattern: $ => choice(
      $._literal_pattern,
      alias(choice(...primitiveTypes), $.identifier),
      $.identifier,
      $.scoped_identifier,
      $.generic_pattern,
      $.tuple_pattern,
      $.tuple_struct_pattern,
      $.struct_pattern,
      $._reserved_identifier,
      $.ref_pattern,
      $.slice_pattern,
      $.captured_pattern,
      $.reference_pattern,
      $.remaining_field_pattern,
      $.mut_pattern,
      $.range_pattern,
      $.or_pattern,
      $.const_block,
      $.macro_invocation,
      '_',
    ),

    integer_literal: _ => token(seq(
      choice(
        /[0-9][0-9_]*/,
        /0x[0-9a-fA-F_]+/,
        /0b[01_]+/,
        /0o[0-7_]+/,
      ),
      optional(choice(...numericTypes)),
    )),

    boolean_literal: _ => choice('true', 'false'),

    _path: $ => choice(
      $.self,
      alias(choice(...primitiveTypes), $.identifier),
      $.metavariable,
      $.super,
      $.crate,
      $.identifier,
      $.scoped_identifier,
      $._reserved_identifier,
    ),

    identifier: _ => /(r#)?[_\p{XID_Start}][_\p{XID_Continue}]*/,

    _reserved_identifier: $ => alias(choice(
      'default',
      'union',
      'gen',
      'raw',
    ), $.identifier),
